fix(radio-group): Fix for label alignment

--- a/src/components/calcite-label/calcite-label.scss
+++ b/src/components/calcite-label/calcite-label.scss
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
-  margin: 0 0 $baseline 0;
+  margin: 0 0 var(--calcite-label-margin-bottom, $baseline) 0;
 }
 
 :host([layout="inline"]) label {
@@ -68,8 +68,7 @@
 }
 
 // status
-$inputStatusColors: "invalid" var(--calcite-ui-red-1),
-  "valid" var(--calcite-ui-text-2), "idle" var(--calcite-ui-text-2);
+$inputStatusColors: "invalid" var(--calcite-ui-red-1), "valid" var(--calcite-ui-text-2), "idle" var(--calcite-ui-text-2);
 
 @each $statusColor in $inputStatusColors {
   $name: nth($statusColor, 1);
